# bobby

./: .gitignore  AGENTS.md  README.md  pyproject.toml
bobby/: __init__.py  __main__.py  app.py  openai_utils.py  phrases.py  recorder.py  style.css
